# SoloSprintForTeamDocs

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json
.agents/skills/create-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr.yml
raycast/: ss4d_create.zsh  ss4d_due.zsh  ss4d_list.zsh  ss4d_point.zsh  ss4d_sort.zsh  ss4d_status.zsh  uv.zsh
src/ss4d/: __init__.py  cli.py  config.py  container.py  format.py  main.py
src/ss4d/document/: __init__.py  confluence.py  confluence_h1_section.py  confluence_html.py  confluence_html_builder.py  confluence_html_parser.py  confluence_storage.py  manager.py
src/ss4d/model/: __init__.py  sprint.py  task.py  task_status.py
src/ss4d/process/: __init__.py  add_task.py  create_task.py  end_sprint.py  list_tasks.py  sort_tasks.py  update_task_due_date.py  update_task_point.py  update_task_status.py
src/ss4d/process/common/: __init__.py  calculate_point.py
tests/: __init__.py  test_add_task.py  test_config.py  test_confluence_document.py  test_container.py  test_create_task.py  test_format.py  test_list_tasks.py  test_main.py  test_sort_tasks.py  test_task.py  test_update_task_due_date.py  test_update_task_point.py  test_update_task_status.py
