[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoloSprintForTeamDocs"
version = "0.1.0"
description = "A personal task management tool using structured data in normal Team Docs documents with relative estimation, cycles, and velocity tracking."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "atlassian-python-api>=4.0",
    "beautifulsoup4>=4.15",
    "dateparser>=1.2",
    "tomlkit>=0.13",
    "typer>=0.16",
]

[project.scripts]
ss4d = "ss4d.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py314"
src = [".", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ss4d"]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
]
