[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoloSprintForTeamDocs"
version = "0.1.0"
description = "通常の Team Docs ドキュメント内の構造化データで相対見積もり、サイクル、ベロシティ追跡を扱う個人向けタスク管理ツール。"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "atlassian-python-api>=4.0",
    "beautifulsoup4>=4.15",
    "dateparser>=1.2",
    "tomlkit>=0.13",
    "typer>=0.16",
]

[project.scripts]
ss4d = "ss4d.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py314"
src = [".", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ss4d"]

[tool.ruff.lint]
extend-select = [
    "I",   # インポートの並び替え
    "UP",  # Python 構文の更新
]
